--- a/templates/main/agenda.html.twig
+++ b/templates/main/agenda.html.twig
@@ -4,9 +4,19 @@
 
     <h2>{{ monthName }}</h2>
 
+    <div class="buttons">
+
+        <a href="{{ path('app_month', { 'month': month > 1 ? month - 1 : 12 } ) }}" class="previous-month"><i class="fa-solid fa-circle-left"></i></a>
+
+
+        <a href="{{ path('app_month', { 'month': month < 12 ? month + 1 : 1 } ) }}" class="next-button"><i class="fa-solid fa-circle-right"></i></a>
+
+    </div>
+
+
         <table class="month_calendar">
 
-
+{#            Boucle de semaine qui s'adapte au nombre de semaines dans le mois en cours#}
 
         {% for week in 1..numberOfWeeks%}
 
@@ -14,19 +24,21 @@
 
                 {% for day in days %}
 
+{#                    Si la variable firstMonday correspond au mois en cours, on lui applique une classe#}
+
                     {% if firstMonday|date('m') == firstDay|date('m') %}
 
                         <td class="text-center calendar_day in-month">
 
-                            <div class="day-name"><a href="#">{{ day }}</a></div>
-                            <div class="day-number">{{ firstMonday|date('d') }}</div>
+                            <div class="day-name"><a href="{{ path('app_daily', {'month':month, 'day':firstMonday|date('d') }) }}">{{ day }}</a></div>
+                            <div class="day-number">{{  firstMonday|date('d') }}</div>
 
                             {% set firstMonday = firstMonday|date_modify("+1 day") %}
 
                         </td>
 
                     {% else %}
-
+{#                        Si la variable firstMonday n/'est pas dans le mois, on change la classe#}
                         <td class="text-center calendar_day not-in-month">
 
                             <div class="day-name">{{ day }}</div>
