Ajout du formulaire de création d'évenement.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,8 @@
 
     <nav>
         <h1 class="navbar text-start">Mon Agenda</h1>
+
+        <a href="{{ path('app_event') }}">Créer un évenement</a>
     </nav>
 
 
